# voice-ai-landscape-demo

./: .gitmodules  README.md  docker-compose.yml
.kiro/settings/: mcp.json
.kiro/specs/livekit-voice-agent/: design.md  requirements.md  tasks.md
.kiro/specs/pipecat-voice-agent/: design.md  requirements.md  tasks.md
.kiro/steering/: context.md
livekit-agent/: .env.example  .gitignore  Dockerfile  README.md  agent.py  config.py  docker-compose.yml  index.html  pyproject.toml  server.py
pipecat-agent/: .env.example  .gitignore  Dockerfile  README.md  bot.py  config.py  docker-compose.yml  index.html  kokoro_tts.py  model_utils.py  pyproject.toml  server.py
