[project]
name = "pipecat-voice-agent"
version = "0.1.0"
description = "Voice AI agent using Pipecat with Speaches and Ollama"
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai[webrtc,openai,ollama,silero]>=0.0.50",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "httpx>=0.27.0",
]
